fix(web): fixes poloroid subtitles to avoid cropping

--- a/arquivo-web/src/styles/Entity.css
+++ b/arquivo-web/src/styles/Entity.css
@@ -34,7 +34,7 @@
 }
 
 .polaroid img {
-    width: 100%;
+    height: 85%;
     aspect-ratio: 3 / 4; /* Maintain a 3:4 aspect ratio */
     object-fit: contain; /* Ensure the image fits within the container */
     filter: grayscale(100%); /* Make the image black and white */
